[package]
name = "Forager"
version = "0.1.0"
authors = ["mzyzc <mzyzc@czyz.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "0.9.2"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
