[package]
name = "forager"
version = "0.1.0"
authors = ["mzyzc <mzyzc@czyz.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.2", features = ["v3_16"] }
gio = { version = "", features = ["v2_44"] }
curl = "0.4"
